Add ShelfWindowWatcher support for pre-existing windows.

Call OnDisplayAdded from ctor; consolidate code.
Call OnUserWindowAdded for each pre-existing window.
(catches windows constructed earlier than the shelf [window watcher])

Add ShelfWindowWatcherSessionStartTest.PreExistingWindow.

BUG=679088
TEST="chrome --mash" shows a QuickLaunch shelf item.
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2618333004
Cr-Commit-Position: refs/heads/master@{#442678}

Former-commit-id: 24ccd0688d195440d8c37f0f256d9a379a25db25